--- a/assets/package.json
+++ b/assets/package.json
@@ -7,7 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js"
   },
-  "author": "Mentor <mentor@palokaj.co> (http://github.com/actuallymentor)",
+  "author": "Carter Crews <govolsgo@users.noreply.github.com> (http://github.com/govolsgo)",
   "license": "MIT",
   "dependencies": {
     "@resvg/resvg-js": "^2.4.1"
